fixed alignment problem

--- a/style.css
+++ b/style.css
@@ -146,10 +146,6 @@ input[type="color"] {
     overflow : auto;
     position: relative;
 }
-.fixed-row{
-    position: fixed;
-    z-index: 100;
-}
 
 
 .block{
@@ -172,12 +168,16 @@ input[type="color"] {
     z-index: 100;
 }
 
+.top-row .col p{
+    width: 100%;
+    text-align: center;
+}
+
 .col{
     min-width: 75px;
     max-width: 75px;
     min-height: 20px;
     font-size: small;
-    display: flex;
     border-left: 1px solid rgb(179, 176, 176);
 }
 
@@ -190,13 +190,18 @@ input[type="color"] {
     align-items: center;
     top: 30px;
     left: 0px;
+    z-index: 20;
 }
+
 
 .row{
     height: 20px;
     border-bottom : 1px solid rgb(179, 176, 176);
     display: flex;
     font-size: small;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .inside-grid{
@@ -204,6 +209,7 @@ input[type="color"] {
     top:30px;
     left: 25px;
 }
+
 
 .row > .col{
     word-break: break-all;
